; ModuleID = '/home/carl/AnghaBench/kphp-kdb/text/extr_text-binlog.c_dump_crc32.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/text/extr_text-binlog.c_dump_crc32.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.lev_crc32 = type { i32, i32 }

@dumping_crc32 = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [10 x i8] c"LEV_CRC32\00", align 1
@out = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [11 x i8] c"%lld\090x%x\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @dump_crc32(%struct.lev_crc32* %0) #0 {
  %2 = alloca %struct.lev_crc32*, align 8
  store %struct.lev_crc32* %0, %struct.lev_crc32** %2, align 8
  %3 = load i32, i32* @dumping_crc32, align 4
  %4 = icmp ne i32 %3, 0
  br i1 %4, label %6, label %5

5:                                                ; preds = %1
  br label %19

6:                                                ; preds = %1
  %7 = call i64 @dump_line_header(i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str, i64 0, i64 0), i8 signext 9)
  %8 = icmp ne i64 %7, 0
  br i1 %8, label %9, label %10

9:                                                ; preds = %6
  br label %19

10:                                               ; preds = %6
  %11 = load i32, i32* @out, align 4
  %12 = load %struct.lev_crc32*, %struct.lev_crc32** %2, align 8
  %13 = getelementptr inbounds %struct.lev_crc32, %struct.lev_crc32* %12, i32 0, i32 1
  %14 = load i32, i32* %13, align 4
  %15 = load %struct.lev_crc32*, %struct.lev_crc32** %2, align 8
  %16 = getelementptr inbounds %struct.lev_crc32, %struct.lev_crc32* %15, i32 0, i32 0
  %17 = load i32, i32* %16, align 4
  %18 = call i32 @fprintf(i32 %11, i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str.1, i64 0, i64 0), i32 %14, i32 %17)
  br label %19

19:                                               ; preds = %10, %9, %5
  ret void
}

declare dso_local i64 @dump_line_header(i8*, i8 signext) #1

declare dso_local i32 @fprintf(i32, i8*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
